<resources>
    <string name="app_name">artikelTokped</string>
    <string name="judul">TOKOPEDIA</string>
    <string name="penulis">Penulis : Yoko Widito</string>
    <string name="isi1">Tokopedia adalah mall online yang memungkinkan penjual untuk membuka toko nya dan melakukan penjualan dengan mudah tanpa harus memikirkan sewa toko dan bayar gaji pegawai. Mengedepankan keamanan transaksi, Tokopedia menawarkan sebuah pengalaman jual beli online yang aman, mudah dan nyaman.</string>
    <string name="isi2">Tokopedia didirikan para 17 Agustus 2009 oleh Wiliam Tanuwijaya dan Leontinus Alpha Edison yang didanai pertama kali oleh PT. Dwitama. Setelah mulai menancapkan kaki di Indonesia, perlahan Tokopedia mendapatkan suntikan dana sebesar USD 100 juta oleh Softbank Internet and Media Inc. dan Sequoia Capital.</string>
    <string name="isi3">Sepanjang perjalanannya Tokopedia berhasil mendapatkan banyak penghargaan Marketeers of the Year 2014 untuk sektor e-commerce (Markplus Conference 2015), Best Company in Consumer Industry dari Indonesia Digital Economy Award 2016.</string>
    <string name="nama">Oleh : M. FADLI, 123180038</string>
</resources>