<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <RelativeLayout
            android:background="#C6FF76"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:padding="5dp"
                android:id="@+id/IV1"
                android:src="@drawable/tokped2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                >
            </ImageView>
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="80dp"
                android:textSize="30dp"
                android:id="@+id/TV1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                android:text="@string/judul"
                android:layout_toRightOf="@id/IV1">
            </TextView>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/TV2"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon.CenterStacked"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/penulis"
                android:layout_below="@id/IV1">
            </TextView>
            <TextView
                android:id="@+id/TV3"
                android:textColor="@color/black"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/isi1"
                android:layout_below="@id/TV2">
            </TextView>
            <TextView
                android:id="@+id/TV4"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/isi2"
                android:textAlignment="center"
                android:layout_below="@id/TV3">
            </TextView>
            <TextView
                android:id="@+id/TV5"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/isi3"
                android:textAlignment="center"
                android:layout_below="@id/TV4">
            </TextView>
            <TextView
                android:paddingBottom="20dp"
                android:id="@+id/TV6"
                android:textColor="@color/black"
                style="@style/CardView"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/nama"
                android:layout_below="@id/TV5"
                >
            </TextView>
        </RelativeLayout>
</ScrollView>